--- a/src/material/core/tokens/m2/mat/_select.scss
+++ b/src/material/core/tokens/m2/mat/_select.scss
@@ -1,5 +1,7 @@
+@use 'sass:map';
 @use '../../token-utils';
 @use '../../../theming/inspection';
+@use '../../../theming/theming';
 @use '../../../style/sass-utils';
 @use '@material/elevation/elevation-theme' as mdc-elevation;
 
@@ -46,7 +48,15 @@ $prefix: (mat, select);
 
 // Tokens that can be configured through Angular Material's density theming API.
 @function get-density-tokens($theme) {
-  @return ();
+  $density-scale: theming.clamp-density(inspection.get-theme-density($theme), -2);
+
+  @return (
+    arrow-transform: map.get((
+      0: translateY(-8px),
+      -1: translateY(-8px),
+      -2: none,
+    ), $density-scale),
+  );
 }
 
 // Combines the tokens generated by the above functions into a single map with placeholder values.
